# YappyAI

./: .env.example  .gitignore  .replit  =0.115.12  =0.12.0  =0.3.0  =0.34.0  =1.5.0  =24.1.0  =3.5.0  =5.4.0  AGENT_ARMY_DESIGN.md  AgenticSeek.bat  AgenticSeek.command  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_COMPLETE.md  DEPLOY_V3.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backup  Dockerfile.backup2  Dockerfile.complete  Dockerfile.deploy  Dockerfile.disabled  Dockerfile.full  Dockerfile.production  Dockerfile.simple  FILE_UPLOAD_GUIDE.md  FINAL_DEPLOYMENT.md  GITHUB_SETUP.md  INSTALL_INSTRUCTIONS.txt  OPENAI_SETUP.md  PDF_FIX_INSTRUCTIONS.md  PDF_UPLOAD_GUIDE.md  Procfile  Procfile.backup  RENDER_DEPLOYMENT.md  RESTART_FRONTEND.md  (+100 more)
.claude/: settings.local.json
.github/workflows/: deploy.yml
docs/: AUTH.md
examples/: auth_example.py
frontend/agentic-seek-front/public/: index.html  manifest.json
frontend/agentic-seek-front/src/: App.css  App.js  Auth.css  Auth.js
prompts/base/: casual_agent.txt  planner_agent.txt
sources/: auth.py  feature_flags.py  llm_handler_minimal.py  llm_handler_v2.py  llm_provider.py  router.py  schemas.py
sources/agents/: __init__.py  automation_agent.py  data_agent.py  orchestrator_agent.py  research_agent.py
sources/tools/: searxSearch.py
static/: agent-dashboard.js  index.html  index_mobile.html  yappy.html  yappy_claude_ui.html  yappy_mobile_v2.html  yappy_responsive.html  yappy_v4.html
