[tool.poetry]
name = "yappy-ai"
version = "0.1.0"
description = "Yappy AI Assistant"
authors = ["YappyAI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
aiofiles = "^24.1.0"
python-multipart = "^0.0.6"
openai = "*"
anthropic = "*"
google-generativeai = "*"
groq = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"